<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".activity.UserDetailsActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userDetails"
        android:textColor="@color/whiteColor"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="true"
                android:layout_weight="1"
                android:text="@string/male"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"
                android:layout_weight="1"
                android:text="@string/female"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:autofillHints="@string/birthday"
                android:id="@+id/birthdayPicker"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userHeight"
                android:hint="@string/height"
                android:autofillHints="@string/height"
                android:inputType="numberSigned"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userTargetWeight"
                android:hint="@string/targetWeight"
                android:autofillHints="@string/targetWeight"
                android:inputType="numberDecimal"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            android:id="@+id/confirmDetailsBt"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>
