<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/whiteColor"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:hint="@string/name"
                android:autofillHints="@string/name"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPassword"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:inputType="textPassword|numberPassword"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmUserPassword"
                android:hint="@string/confirmPassword"
                android:autofillHints="@string/confirmPassword"
                android:inputType="textPassword|numberPassword"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmail"
                android:hint="@string/userEmail"
                android:autofillHints="@string/userEmail"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:id="@+id/registerBt"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>
