<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/whiteColor"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userNameLogin"
                android:hint="@string/name"
                android:autofillHints="@string/name"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPasswordLogin"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:id="@+id/loginBt"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>